# skratch_simulation

./: README.md
config/rviz/: skratch_description.rviz  skratch_simulation.rviz
include/skratch_gazebo/: KeloDrive.hpp
launch/: simulation.launch.py  view_robot.launch.py
skratch_gazebo/: CMakeLists.txt  package.xml
skratch_gazebo/config/controllers/: ros_controllers.yaml
skratch_gazebo/config/doxygen/: Doxyfile.in
skratch_gazebo/include/skratch_gazebo/: SkratchPlatformController.hpp
skratch_gazebo/src/: KeloDrive.cpp  SkratchPlatformController.cpp  main.cpp
skratch_mapping/: CMakeLists.txt  package.xml
