<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>skratch_gazebo</name>
    <version>0.0.0</version>
    <description>TODO: Gazebo of the sKratch robot</description>
    <maintainer email="chaitanyagumudala961@gmail.com">Chaitanya Gumudala</maintainer>
    <license>TODO: License declaration</license>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>kelo_tulip</depend>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <!-- Build dependencies -->
    <build_depend>launch</build_depend>
    <build_depend>launch_ros</build_depend>
    <!-- Execution dependencies -->
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>robile_description</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>xacro</exec_depend>
    <depend>gazebo_ros_pkgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>ros_gz_sim</depend>
    <depend>ros_gz_bridge</depend>
    <depend>ros_ign_bridge</depend>
    <depend>visualization_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>ros2run</exec_depend>
    <exec_depend>ros2topic</exec_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>
    <exec_depend>rviz</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>